--- a/stage-04/projects/imc/index.html
+++ b/stage-04/projects/imc/index.html
@@ -57,7 +57,7 @@
           <label class="hidden-label" for="">Fechar</label>
           <img src="images/close.svg" alt="" />
         </button>
-        <h2 id="imc-result" class="title">Seu IMC é de 29</h2>
+        <h2 id="imc-result" class="title">Seu IMC é</h2>
       </div>
     </div>
   </body>
